--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: store_app
+name: barber_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.3.0
   firebase_auth: ^5.2.0
   google_sign_in: ^6.2.1
+  rename_app: ^1.6.1
 
 dev_dependencies:
   flutter_test:
